--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -117,7 +117,6 @@ a:hover, a:visited, a:link, a:active{
 }
 .navbar .search_div #seaform input {
 	float:left;
-	padding:4px 0;
 	outline: none;
 	border:none;
 	height:30px;
@@ -452,26 +451,29 @@ a:hover, a:visited, a:link, a:active{
 	float:left;
 	color:#888789;
 	font-size:12px;
-	height:0.36rem;
-	line-height:0.36rem;
+	height:18px;
+	line-height:18px;
 }
 .cards_list ul li .involved>img{
 	float:left;
-	width:0.36rem;
-	height:0.36rem;
+	width:18px;
+	height:18px;
 
 }
 .cards_list ul li .involved .none{
-	line-height:0.36rem;
+	line-height:18px;
 	float:left;
 	margin-left:0.1rem;
+	height:18px;
 }
 .cards_list ul li .involved li{
 	float:left;
 	margin-right:0.1rem;
+	height:18px;
+	line-height:18px;
 }
 .cards_list ul li .involved li>img{
-	height:0.36rem;
+	height:18px;
 	float:left;
 }
 .featured .other{
@@ -761,6 +763,145 @@ a:hover, a:visited, a:link, a:active{
 	height:100%;
 	float:left;
 }
+
+/* 小发明页面轮播图 */
+.inventions_swiper{
+	width:7.5rem;
+	height:2.62rem!important;
+	overflow:hidden;
+}
+.inventions_swiper a{
+	display:inline-block;
+	width:7.5rem;
+	height:2.62rem!important;
+	float:left;
+}
+.inventions_swiper .swiper-slide img{
+	width:7.5rem;
+	height:2.62rem;
+}
+.swiper-container-horizontal>.swiper-pagination{
+	background: none;
+    transition: all 0.4s ease-in-out;
+    width:120px;
+    height:12px;
+    line-height:12px;
+    left:50%;
+    margin-left:-60px;
+    bottom:0.1rem;
+    text-align: center;
+}
+.inventions_swiper .swiper-pagination-bullet {
+	background: rgba(0,0,0,0.2);
+    display:inline-block;
+    width:6px;
+    height:6px;
+    border-radius: 50%;
+    transition: all 0.4s ease-in-out;
+}
+.inventions_swiper .swiper-pagination-bullet-active {
+    background: rgba(0,0,0,0.4);
+}
+.swiper-container-horizontal>.swiper-pagination .swiper-pagination-bullet {
+	margin:3px 3px;
+}
+.inventions_swiper .swiper-button-next{
+    background-image: url("../img/designer_right.png");
+    background-size:12px 21px;
+    width:12px;
+    height:21px;
+}
+.inventions_swiper .swiper-button-prev{
+    background-image: url("../img/designer_left.png");
+    background-size:12px 21px;
+    width:12px;
+    height:21px;
+}
+/* 小发明页面作品分类列表 */
+.wrap1{
+	width:7.5rem;
+	background:#f7f7f9;
+}
+.cate {
+	margin:0.3rem auto;
+	width:193px;
+	height:20px;
+}
+.cate li{
+	float:left;
+	height:20px;
+	margin-right:28px;
+}
+.cate li:last-child{
+	margin-right:0;
+}
+.cate li a {
+	display:inline-block;
+	width:100%;
+	height:20px;
+}
+.cate li p{
+	float:left;
+	height:20px;
+	line-height:20px;
+	font-size:14px;
+	margin-left:3px;
+	margin-bottom:0;
+}
+.cate li.active p{
+	color:#f8c013;
+}
+.cate .shixian span{
+	float:left;
+	width:15px;
+	height:20px;
+	background:url('../img/shixian.png') no-repeat;
+	background-size:15px 20px;
+}
+.cate .shixian.active span{
+	background:url('../img/recommend.png') no-repeat;
+	background-size:15px 20px;
+}
+.cate .tuijian span{
+	float:left;
+	width:17px;
+	height:20px;
+	background:url('../img/tuijian.png') no-repeat;
+	background-size:17px 20px;
+}
+.cate .tuijian.active span{
+	background:url('../img/tuijian1.png') no-repeat;
+	background-size:15px 20px;
+}
+.cate .zuixin span{
+	float:left;
+	width:12px;
+	height:20px;
+	background:url('../img/zuixin.png') no-repeat;
+	background-size:12px 20px;
+}
+.cate .zuixin.active span{
+	background:url('../img/zuixin1.png') no-repeat;
+	background-size:12px 20px;
+}
+.more_inventions {	
+	padding-top:0.18rem;
+	text-align: center;
+}
+.more_inventions span{
+	display:inline-block;
+	width:1.7rem;
+	height:0.5rem;
+	line-height:0.5rem;
+	text-align: center;
+	color:#aaa9aa;
+	font-size:14px;
+	border:1px solid #aaa9aa;
+	color:#888789;
+	border-radius: 0.36rem;
+	margin:0 auto 0.4rem;
+}
+
 @media (min-device-width:320px) and (max-device-width:374px){   
 	.menu {
 		font-size:14px;
@@ -782,5 +923,8 @@ a:hover, a:visited, a:link, a:active{
 	}
 	.d_comments li .name{
 		margin-top:0;
+	}
+	.more_inventions span{
+		font-size:12px;
 	}
 }
