--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -412,6 +412,8 @@ a:hover, a:visited, a:link, a:active{
 	display:inline-block;
 	width:30px;
 	height:15px;
+	line-height:15px;
+	text-align: center;
 	background:#000;
 	border-radius: 1px;
 	box-sizing: border-box;
