--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -27,6 +27,12 @@ a:hover, a:visited, a:link, a:active{
 	text-decoration: none;
 	color:#4a4a4a;
 }
+.show{
+    display: block;
+}
+.hide{
+    display: none;
+}
 @font-face {
   font-family: 'iconfont';  /* project id 135369 */
   src: url('//at.alicdn.com/t/font_nxxgzpmkxrhsq0k9.eot');
@@ -900,8 +906,7 @@ a:hover, a:visited, a:link, a:active{
 	height:0.5rem;
 	line-height:0.5rem;
 	text-align: center;
-	color:#aaa9aa;
-	font-size:14px;
+	font-size:12px;
 	border:1px solid #aaa9aa;
 	color:#888789;
 	border-radius: 0.36rem;
@@ -928,8 +933,5 @@ a:hover, a:visited, a:link, a:active{
 	}
 	.d_comments li .name{
 		margin-top:0;
-	}
-	.more_inventions span{
-		font-size:12px;
 	}
 }
