--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -30,9 +30,6 @@ a:hover, a:visited, a:link, a:active{
 .show{
     display: block;
 }
-.hide{
-    display: none;
-}
 @font-face {
   font-family: 'iconfont';  /* project id 135369 */
   src: url('//at.alicdn.com/t/font_nxxgzpmkxrhsq0k9.eot');
@@ -254,19 +251,24 @@ a:hover, a:visited, a:link, a:active{
 	background:#f7f7f9;
 }
 .wrap .hide{
-	width:7.5rem;
+	display:block!important;
+	width:0;
 	height:15rem;
 	position: absolute;
 	z-index: 999;
-	display:none;
 	left:0;
 	top:0;
+	-webkit-transition: width 500ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	   -moz-transition: width 500ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	    -ms-transition: width 500ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	     -o-transition: width 500ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	        transition: width 500ms cubic-bezier(0.000, 0.995, 0.990, 1.000);	
 }
 .wrap.animate{
 	left:5.5rem;
 }
 .wrap.animate .hide{
-	display:block!important;
+	width:7.5rem;
 }
 /* 首页脑洞推荐部分 */
 .index_bg{
