--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -30,6 +30,9 @@ a:hover, a:visited, a:link, a:active{
 .show{
     display: block;
 }
+.hide{
+	display:none;
+}
 @font-face {
   font-family: 'iconfont';  /* project id 135369 */
   src: url('//at.alicdn.com/t/font_nxxgzpmkxrhsq0k9.eot');
@@ -250,7 +253,7 @@ a:hover, a:visited, a:link, a:active{
 	width:7.5rem;
 	background:#f7f7f9;
 }
-.wrap .hide{
+.wrap .door{
 	display:block!important;
 	width:0;
 	height:15rem;
@@ -267,8 +270,9 @@ a:hover, a:visited, a:link, a:active{
 .wrap.animate{
 	left:5.5rem;
 }
-.wrap.animate .hide{
+.wrap.animate .door{
 	width:7.5rem;
+	display:block!important;
 }
 /* 首页脑洞推荐部分 */
 .index_bg{
@@ -868,7 +872,7 @@ a:hover, a:visited, a:link, a:active{
 	background-size:17px 20px;
 }
 .cate .tuijian.active span{
-	background:url('../img/tuijian1.png') no-repeat;
+	background:url('../img/recommend.png') no-repeat;
 	background-size:15px 20px;
 }
 .cate .zuixin span{
@@ -1019,11 +1023,14 @@ a:hover, a:visited, a:link, a:active{
 	background:#fff;
 	margin-bottom:0.3rem;
 }
+.painting_details span{
+	font-size:14px!important;
+}
 .painting_details img{
 	width:100%;
 }
 .painting_details ul,.painting_details ol{
-	padding-left:0.2rem;
+	padding-left:0.6rem;
 }
 .painting_more{
 	background:#fff;
@@ -1035,6 +1042,225 @@ a:hover, a:visited, a:link, a:active{
 	line-height:0.4rem;
 	font-size:14px;
 	margin-bottom:0;
+}
+/* 足迹页面 */
+.map{
+	width:7.5rem;
+	position: relative;
+}
+.map .title{
+	width:3.69rem;
+	height:0.25rem;
+	margin:0.25rem auto;
+	background:url('../img/map_title.png') no-repeat;
+	background-size:3.69rem 0.25rem;
+}
+.map .map_img{
+	width:6.49rem;
+	height:5.13rem;
+	margin:0 auto;
+	background:url('../img/map.png') no-repeat;
+	background-size:6.49rem 5.13rem
+}
+.map span{
+	display:inline-block;
+	position: absolute;
+}
+.map .map_left1{
+	width:0.49rem;
+	height:0.6rem;
+	background:url('../img/map_left1.png') no-repeat;
+	background-size:0.49rem 0.6rem;
+	left:0.7rem;
+	top:0.9rem;
+}
+.map .map_left2{
+	width:0.52rem;
+	height:0.4rem;
+	background:url('../img/map_left2.png') no-repeat;
+	background-size:0.52rem 0.4rem;
+	left:0;
+	top:1.7rem;
+}
+.map .map_left3{
+	width:0.58rem;
+	height:0.8rem;
+	background:url('../img/map_left3.png') no-repeat;
+	background-size:0.58rem 0.8rem;
+	left:0.5rem;
+	top:3.9rem;
+}
+.map .map_right1{
+	width:0.48rem;
+	height:0.79rem;
+	background:url('../img/map_right1.png') no-repeat;
+	background-size:0.48rem 0.79rem;
+	right:0rem;
+	top:1.2rem;
+}
+.map .map_right2{
+	width:0.91rem;
+	height:0.64rem;
+	background:url('../img/map_right2.png') no-repeat;
+	background-size:0.91rem 0.64rem;
+	right:0.1rem;
+	top:3.8rem;
+}
+.announce,.news,.about{
+	width:6.5rem;
+	margin:0 auto;
+}
+.announce .title,.news .title,.about .title{
+	text-align: center;
+	margin:0.4rem auto;
+}
+.announce .title img,.news .title img,.about .title img{
+	width:1.84rem;
+}
+.announce>img{
+	width:100%;
+	margin-bottom:0.25rem;
+}
+.announce>img:last-child{
+	margin-bottom:0;
+}
+.news .newsList{
+	width:100%;
+}
+.news .newsList ul li{
+	width:100%;
+	border:1px solid #d8d8d8;
+	position: relative;
+	margin-bottom:0.22rem;
+}
+.news .newsList ul li:last-child{
+	margin-bottom:0;
+}
+.news .newsList ul li a{
+	float:left;
+	width:100%;
+	height:100%;
+	display:flex;
+	align-items: center;
+}
+.news .newsList ul li a>img{
+	height:1.75rem;
+	width:2.63rem;
+	margin-right:0.27rem;
+	float:left;
+}
+.news .newsList ul li span{
+	float:left;
+	font-size:12px;
+	color:#4a4a4a;
+	width:3.5rem;
+	line-height:16px;
+}
+.news .newsList ul li .work_cate{
+	position: absolute;
+	left:2.9rem;
+	top:0.11rem;
+}
+.news .newsList ul li .work_cate img{
+	height:0.36rem;
+}
+.news .newsList ul li .time{
+	position:absolute;
+	bottom:0;
+	left:2.9rem;
+	width:2rem;
+	overflow:hidden;
+	height:18px;
+}
+.news .more{
+	width: 1.7rem;
+	height: 0.5rem;
+    line-height: 0.5rem;	
+    border: 1px solid #aaa9aa;
+    border-radius: 0.36rem;
+    margin:0.4rem auto 0.6rem;
+    position: relative;
+}
+.news .more a{	
+    display: inline-block;
+    position: absolute;
+    width:100%;
+    height:100%;    
+    text-align: center;
+    font-size: 12px;    
+    color: #888789;    
+}
+.about .aboutList ul li{
+	width:6.5rem;
+	border:1px solid #d8d8d8;
+	padding:0.2rem 0.2rem 0;
+	margin-bottom:0.2rem;
+}
+.about .aboutList ul li a{
+	display:inline-block;
+	width:100%;
+	height:100%;
+}
+.about .aboutList ul li img{
+	float:left;
+	width:100%;
+}
+.about .aboutList ul li .name {
+	float:left;
+	font-size:12px;
+	color:#4a4a4a;
+	line-height:18px;
+	white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width:100%;
+    margin:0.1rem 0;
+}
+.about .aboutList ul li p{
+	margin-bottom:0.1rem;
+	height:18px;
+	line-height:18px;
+	float:left;
+	font-size:12px;
+}
+.about .aboutList ul li p span{
+	float:left;
+	color:#888689;
+}
+.about .aboutList ul li p .clock{
+	display:inline-block;
+	width:18px;
+	height:18px;
+	margin-right:0.1rem;
+	background:url('../img/clock.png') no-repeat;
+	background-size:16px 16px;
+	background-position: center center;
+}
+.about .more {
+	width: 1.7rem;
+    height: 0.5rem;
+    line-height: 0.5rem;
+    border: 1px solid #aaa9aa;
+    border-radius: 0.36rem;
+    margin: 0.4rem auto;
+    text-align: center;
+    font-size:12px;
+    color:#888789;
+}
+.returnTop{
+	width:0.5rem;
+	height:0.5rem;
+	background:url('../img/top.png') no-repeat;
+	background-size:0.5rem 0.5rem;
+	position:fixed;
+	bottom:1.5rem;
+	right:0;
+	opacity: 0;
+	-webkit-transition: opacity 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	   -moz-transition: opacity 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	    -ms-transition: opacity 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	     -o-transition: opacity 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	        transition: opacity 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
 }
 @media (min-device-width:320px) and (max-device-width:374px){   
 	.menu {
