--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -861,7 +861,7 @@ a:hover, a:visited, a:link, a:active{
 	background-size:15px 20px;
 }
 .cate .shixian.active span{
-	background:url('../img/recommend.png') no-repeat;
+	background:url('../img/shixian1.png') no-repeat;
 	background-size:15px 20px;
 }
 .cate .tuijian span{
