--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -97,12 +97,17 @@ a:hover, a:visited, a:link, a:active{
 .navbar .search_div{
 	position: absolute;
 	width:7.5rem;
-	height:15rem;
+	height:0;
 	background:rgba(0,0,0,0.8);
 	left:0;
 	top:0;
-	z-index: 10;
-	display:none;
+	z-index: 100;
+	overflow:hidden;
+	-webkit-transition: height 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	   -moz-transition: height 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	    -ms-transition: height 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	     -o-transition: height 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+	        transition: height 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
 }
 .navbar .search_div #seaform {
 	margin-top:18px;
@@ -1258,10 +1263,11 @@ a:hover, a:visited, a:link, a:active{
     border-radius: 0.36rem;
 }
 .returnTop{
-	width:0.8rem;
-	height:0.8rem;
+	width:1rem;
+	height:1rem;
 	background:url('../img/top.png') no-repeat;
 	background-size:0.8rem 0.8rem;
+	background-position:right bottom;
 	position:fixed;
 	bottom:1.5rem;
 	z-index: 99;
