--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -1142,6 +1142,8 @@ a:hover, a:visited, a:link, a:active{
 	border:1px solid #d8d8d8;
 	position: relative;
 	margin-bottom:0.22rem;
+	display:flex;
+	align-items: center;
 }
 .news .newsList ul li:last-child{
 	margin-bottom:0;
@@ -1154,6 +1156,12 @@ a:hover, a:visited, a:link, a:active{
 	align-items: center;
 }
 .news .newsList ul li a>img{
+	height:1.75rem;
+	width:2.63rem;
+	margin-right:0.27rem;
+	float:left;
+}
+.news .newsList ul li>img{
 	height:1.75rem;
 	width:2.63rem;
 	margin-right:0.27rem;
@@ -1182,20 +1190,20 @@ a:hover, a:visited, a:link, a:active{
 	overflow:hidden;
 	height:18px;
 }
-.news .more{
+.news .more{	
+    text-align: center;
+    padding:0.4rem 0 0.6rem;    
+}
+.news .more a{
+	color: #888789;
+}
+.news .more span{	
 	width: 1.7rem;
 	height: 0.5rem;
-    line-height: 0.5rem;	
+	line-height: 0.5rem;	
     border: 1px solid #aaa9aa;
     border-radius: 0.36rem;
-    margin:0.4rem auto 0.6rem;
-    position: relative;
-}
-.news .more a{	
-    display: inline-block;
-    position: absolute;
-    width:100%;
-    height:100%;    
+    display: inline-block;    
     text-align: center;
     font-size: 12px;    
     color: #888789;    
