--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -1379,6 +1379,24 @@ a:hover, a:visited, a:link, a:active{
 	line-height:0.4rem;
 	padding-left:0.2rem;
 }
+/* 搜索页面 */
+.searchDiv .search_title {
+	margin:0.4rem auto;
+	text-align: center;
+	font-size:16px;
+	line-height:20px;	
+}
+.searchDiv .search_title span{
+	color:#aaa9aa;
+}
+.searchDiv .search_none{
+	font-size:14px;
+	color:#aaa9aa;
+	line-height:20px;
+	margin:0.8rem auto 0.6rem;
+	text-align: center;
+}
+
 @media (min-device-width:320px) and (max-device-width:374px){   
 	.menu {
 		font-size:14px;
