--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -1119,7 +1119,7 @@ a:hover, a:visited, a:link, a:active{
 	border:2px solid #d3d3d3;
 	background:#d0d0d0;
 	line-height:16px;
-	text-align: left;
+	text-align: center;
 	color:#fff;
 	z-index: 2;
 }
@@ -1143,7 +1143,7 @@ a:hover, a:visited, a:link, a:active{
 	border:2px solid #d3d3d3;
 	background:#d0d0d0;
 	line-height:16px;
-	text-align: left;
+	text-align: center;
 	color:#fff;
 	z-index: 2;
 }
@@ -1162,26 +1162,37 @@ a:hover, a:visited, a:link, a:active{
 .details_footer .share_div{
 	position:absolute;
 	width:7.5rem;
-	height:110px;
-	top:-60px;
+	bottom:0;
 	left:0;
 	z-index: 10;
-	padding:0 0.5rem;
-	background:rgba(153,153,153,1);
 	display:none;
+	background:rgba(0,0,0,0.7);
 }
 .details_footer .share_div .tab{
 	width:100%;
-	height:60px;
+	padding:0 0.5rem;
+	height:100px;
 	display:flex;
 	align-items: center;
 	justify-content: space-around;
+	position: absolute;
+	bottom:40px;
+	background:#fff;
 }
 .details_footer .share_div .del{
+	width:100%;
+	padding:0 0.5rem;	
+	position: absolute;
+	bottom:0;
+	background:#fff;
+}
+.details_footer .share_div .del span{
+	border-top:1px solid #d8d8d8;
+	display:inline-block;
+	width:100%;
+	height:40px;
+	line-height:40px;
 	text-align: center;
-	height:50px;
-	line-height:50px;
-	color:#fff;
 }
 /* 足迹页面 */
 .map{
