--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -1164,7 +1164,7 @@ a:hover, a:visited, a:link, a:active{
 	width:7.5rem;
 	bottom:0;
 	left:0;
-	z-index: 10;
+	z-index: 30;
 	display:none;
 	background:rgba(0,0,0,0.7);
 }
@@ -1420,7 +1420,7 @@ a:hover, a:visited, a:link, a:active{
 	background-position:right bottom;
 	position:fixed;
 	bottom:1.5rem;
-	z-index: 99;
+	z-index: 9;
 	right:0;
 	opacity: 0;
 	-webkit-transition: opacity 200ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
@@ -1543,7 +1543,161 @@ a:hover, a:visited, a:link, a:active{
 	margin:0.8rem auto 0.6rem;
 	text-align: center;
 }
-
+/* 评论页面 */
+.comment .title{
+	padding:0.4rem 0;
+	text-align:center;
+	font-size:16px;
+	line-height:20px;
+	color:#323232;
+	letter-spacing: 5px;
+	border-bottom:1px solid #d8d8d8;
+}
+.comment .reply_content{
+	position: fixed;
+	bottom:0;
+	width:100%;
+	padding:5px 0.3rem;
+	border-top:1px solid #d8d8d8;
+	background:#fff;
+	z-index: 29;
+}
+.comment .reply_content textarea{
+	width:100%;
+	font-size: 12px;
+	height:30px;
+	line-height:24px;
+	padding:3px 0 3px 0.3rem;
+	outline: none;
+	border-radius: 15px;
+	overflow-y: hidden;
+	border:1px solid #d8d8d8;
+	float:left;
+}
+.comment .reply_content .sub_comment{
+	width:40px;
+	height:20px;
+	line-height:20px;
+	float:right;
+	margin-top:0.2rem;
+	background:#e9a81d;
+	color:#fff;
+	text-align: center;
+	font-size: 12px;
+	letter-spacing: 0.05rem;
+	display:none;
+}
+.comment .hide_bg{
+	width:7.5rem;
+	background:rgba(0,0,0,0.6);
+	height:0;
+	position:fixed;
+	left:0;
+	top:-0.9rem;
+	z-index: 29;
+}
+.comment .reply_content textarea.focus{
+	height:80px;
+	border-radius: 0;
+	padding:3px 0.2rem 3px 0.2rem;
+	overflow-y:scroll;
+}
+.comment .reply_content .login_text{
+	height:30px;
+	line-height:24px;
+	padding:3px 0.2rem 3px 0.2rem;
+	font-size:12px;
+}
+.comment .reply_content .login_text a{
+	text-decoration:underline;
+	color:#e9a81d;
+	margin:0 5px;
+}
+.comment ul{
+	padding-bottom:40px;
+}
+.comment li.comment_item{
+	width:6.5rem;
+	margin:0.5rem auto 0.5rem;
+	border-bottom:1px dotted #d8d8d8;
+	padding-bottom:0.4rem;
+}
+.comment .comment_item .people .avatar{
+	float:left;
+	width:40px;
+	height:40px;
+	margin-right:0.3rem;
+}
+.comment .comment_item .people .name{
+	float:left;
+	width:70%;
+	height:20px;
+	line-height:20px;
+	font-size:14px;
+	color:#4a4a4a;
+	margin-bottom:6px;
+}
+.comment .comment_item .people .time{
+	float:left;
+	width:70%;
+	font-size:12px;
+	color:#bdbaba;
+	line-height:14px;
+	height:14px;
+}
+.comment .comment_item .voice{
+	margin-top:0.3rem;
+}
+.comment .comment_item .voice p{
+	text-align: justify;
+	font-size:14px;
+	margin-bottom:5px;
+}
+.comment .comment_item .voice .reply{
+	float:left;
+	height:18px;
+	line-height:18px;
+	font-size:12px;
+	color:#bdbaba;
+}
+.comment .comment_item .voice .reply i{
+	float:left;
+	font-size:14px;
+	margin-right:2px;
+	margin-top:1px;
+}
+.comment .comment_item .voice form{
+	position: fixed;
+	bottom:0;
+	z-index: 30;
+	width:7.5rem;
+	padding:5px 0.3rem;
+	left:0;
+	background:#fff;
+	display:none;
+}
+.comment .comment_item .voice form textarea{
+	width:100%;
+	font-size: 12px;
+	height:80px;
+	line-height:20px;
+	padding:3px 0.2rem 3px 0.2rem;
+	outline: none;
+	border:1px solid #d8d8d8;
+	float:left;
+}
+.comment .comment_item .voice form .sub_reply{
+	width:40px;
+	height:20px;
+	line-height:20px;
+	float:right;
+	margin-top:0.2rem;
+	background:#e9a81d;
+	color:#fff;
+	text-align: center;
+	font-size: 12px;
+	letter-spacing: 0.05rem;
+}
 @media (min-device-width:320px) and (max-device-width:374px){   
 	.menu {
 		font-size:14px;
