--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -1601,7 +1601,7 @@ a:hover, a:visited, a:link, a:active{
 	height:0;
 	position:fixed;
 	left:0;
-	top:-0.9rem;
+	bottom:0;
 	z-index: 29;
 }
 .comment .reply_content textarea.focus{
@@ -1673,6 +1673,10 @@ a:hover, a:visited, a:link, a:active{
 	font-size:14px;
 	margin-right:2px;
 	margin-top:1px;
+	height:17px;
+}
+.comment .comment_item .voice .reply span{
+	float:left;
 }
 .comment .comment_item .voice form{
 	position: fixed;
