--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -1605,7 +1605,7 @@ a:hover, a:visited, a:link, a:active{
 	height:0;
 	position:fixed;
 	left:0;
-	bottom:0;
+	bottom:40px;
 	z-index: 29;
 }
 .comment .reply_content textarea.focus{
@@ -1671,8 +1671,6 @@ a:hover, a:visited, a:link, a:active{
 }
 .comment .comment_item .voice .reply{
 	float:left;
-	height:18px;
-	line-height:18px;
 	font-size:12px;
 	color:#bdbaba;
 }
@@ -1680,11 +1678,12 @@ a:hover, a:visited, a:link, a:active{
 	float:left;
 	font-size:14px;
 	margin-right:2px;
-	margin-top:1px;
 	height:17px;
 }
 .comment .comment_item .voice .reply span{
 	float:left;
+	height:18px;
+	line-height: 18px;
 }
 .comment .comment_item .voice form{
 	position: fixed;
