--- a/public/mobile/css/common.css
+++ b/public/mobile/css/common.css
@@ -1603,7 +1603,7 @@ a:hover, a:visited, a:link, a:active{
 	line-height:24px;
 	float:right;
 	margin-top:0.2rem;
-	background:#f8c013;
+	background:#888789;
 	color:#fff;
 	text-align: center;
 	font-size: 12px;
@@ -1724,7 +1724,7 @@ a:hover, a:visited, a:link, a:active{
 	line-height:20px;
 	float:right;
 	margin-top:0.2rem;
-	background:#e9a81d;
+	background:#888789;
 	color:#fff;
 	text-align: center;
 	font-size: 12px;
