--- a/public/mobile/css/qrCode.css
+++ b/public/mobile/css/qrCode.css
@@ -1,16 +1,15 @@
 html, body {
-    height: 100vh;
-    
+    width:7.5rem;	
+	height:13.34rem;
     font-family: Arial,Helvetica,'Hiragino Sans GB','Microsoft YaHei',sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #2b2b2b ;
 }
-body{
-	width:7.5rem;	
+body{	
 	overflow-x:hidden;
 	position:relative;
 	background:url('../img/qr_bg.png') no-repeat;
-	background-size:7.5rem;
+	background-size:7.5rem 13.34rem;
 	
 }
 .clearfix:after{
@@ -29,6 +28,9 @@ a:hover, a:visited, a:link, a:active{
 	text-decoration: none;
 	color:#4a4a4a;
 }
+input[type='text'],input[type='tel']{
+	 -webkit-appearance: none;
+}
 .wrap{
 	width:5.35rem;
 	margin:0 auto;
@@ -41,9 +43,14 @@ a:hover, a:visited, a:link, a:active{
 	display: flex; 
 	flex-flow: row nowrap;
 }
-.input_group input{
-	outline-color:#f9cc46;
+input{
+	outline:none;
 }
+input:focus{
+	border-color: #f9cc46;
+    box-shadow: 0 0 10px #f9cc46;
+}
+
 .input_group p{
 	margin-bottom:0;
 
@@ -72,20 +79,22 @@ a:hover, a:visited, a:link, a:active{
 .input_group input{
 	flex:1;
 	height:30px;
-	padding:2px 0 2px 10px;
-	line-height:22px;
+	padding:7px 0 7px 10px;
+	line-height:14px;
 	box-sizing: border-box;
 	border:1px solid #f0f0f0;
+	font-size:14px;
 }
 .input_group .age{
 	display:flex;
 	flex-flow: row nowrap;
 }
 .input_group .age input{
-	width:1rem;
-	margin-right:1rem;
-	padding:2px 0 2px 5px;
-	
+	width:1.2rem;
+	margin-right:0.8rem;
+	padding:7px 0 7px 5px;
+	line-height:14px;
+	font-size:14px;
 }
 .input_group .sex{
 	display:flex;
@@ -94,12 +103,11 @@ a:hover, a:visited, a:link, a:active{
 	line-height:30px;
 }
 .input_group .sex input{
-	padding:0;
-	height:32px;
-	line-height:30px;
 	margin-top:0;
 	margin-right:3px;
-	
+	padding:7px 0 7px 5px;
+	line-height:14px;
+	font-size:14px;
 }
 .input_group .sex input:last-child{
 	margin-left:10px;
@@ -123,12 +131,13 @@ a:hover, a:visited, a:link, a:active{
 	z-index: 2;
 	display:none;
 }
-.check input[type='text']{
-	width:1rem;
+.check input[type='tel']{
+	width:1.5rem;
 	margin-right:30px;
 	height:30px;
-	padding:2px 0 2px 10px;
-	line-height:22px;
+	padding:7px 0 7px 5px;
+	line-height:14px;
+	font-size:14px;
 	box-sizing: border-box;
 	border:1px solid #f0f0f0;
 }
@@ -159,15 +168,15 @@ a:hover, a:visited, a:link, a:active{
 	width:1.8rem;
 	
 }
-@media (max-device-width:320px){
+@media (max-device-width:413px){
 	.name input{
 		width:2rem;
 	}
 	.input_group .age input{
 		margin-right:0.4rem;		
 	}
-	.check input[type='text']{
-		width:1.2rem;
+	.check input[type='tel']{
+		width:1.5rem;
 		margin-right:10px;
 	}
 }
