--- a/public/mobile/css/qrCode.css
+++ b/public/mobile/css/qrCode.css
@@ -50,7 +50,10 @@ input:focus{
 	border-color: #f9cc46;
     box-shadow: 0 0 10px #f9cc46;
 }
-
+input[type='radio']:focus{
+	border:none;
+	box-shadow:none;
+}
 .input_group p{
 	margin-bottom:0;
 
