--- a/public/mobile/css/qrCode.css
+++ b/public/mobile/css/qrCode.css
@@ -1,15 +1,16 @@
 html, body {
     width:7.5rem;	
-	height:13.34rem;
+	max-height:100vh;
     font-family: Arial,Helvetica,'Hiragino Sans GB','Microsoft YaHei',sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #2b2b2b ;
 }
 body{	
 	overflow-x:hidden;
+	overflow-y: hidden;
 	position:relative;
 	background:url('../img/qr_bg.png') no-repeat;
-	background-size:7.5rem 13.34rem;
+	background-size:7.5rem;
 	
 }
 .clearfix:after{
